--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             Hi! I am your webapp.
         </div>
-        <div Hi this is my first app</div>
+        <div> Hi this is my first app</div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
