--- a/article-one.html
+++ b/article-one.html
@@ -1,7 +1,21 @@
 <html>
 <head>
-<title></title>
+<title>article one|ashok reddy</title>
 </head>
 <body>
+    <div>
+        <a href='/'>Home</a>
+    </div>
+    <div>
+     Sept 3rd,2017
+    </div>
+ <h3>
+     Article one
+ </h3>
+ <div>
+     <p>
+         This is article one.
+     </p>
+ </div>
 </body>
-<html>
+</html>
